Fixed overlap media problem, inverted graph x-axis. Doing css for Global Crypto Stats

--- a/src/components/CryptoDetails.css
+++ b/src/components/CryptoDetails.css
@@ -178,6 +178,7 @@
   color: var(--pink);
   font-weight: 700;
   font-size: 1rem;
+  z-index: 2;
 }
 
 .coin-link:hover,
